# Relationship_telegram_bot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
lovebot/: __init__.py  bot.py  config.py  content_picker.py  database.py  i18n.py  keep_alive.py  keyboards.py  scheduler.py  utils.py
lovebot/content/: __init__.py  advice.py  challenges.py  compliments.py  greetings.py  quotes.py
